# gdlraw

./: .gitignore  CAPABILITY_ASSESSMENT.md  chromenet_wreq_alignment_analysis.md  masterplan_chromenet_wreq.md
chromenet/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  FUTURE_OPTIMIZATIONS.md  README.md
chromenet/.cargo/: config.toml
chromenet/benches/: cookies_bench.rs  device_bench.rs  emulation_bench.rs  h1_vs_h2.rs  headers.rs  hsts_bench.rs  pinning_bench.rs  pool.rs  psl_bench.rs  realistic_workload.rs  tls_bench.rs
chromenet/docs/: PERFORMANCE.md  architecture.md  base.md  codemap.md  cookies.md  errors.md  http.md  quic.md  socket.md  tls.md  urlrequest.md  websocket.md
chromenet/docs/archive/: CHROMENET_ANALYSIS.md  EDGE_CASES.md  ROADMAP.md
chromenet/docs/capabilities/: README.md  features.md  limitations.md  production_status.md
chromenet/examples/: advanced_bot.rs  browser_emulation.rs  cookie_session.rs  cookieextract.rs  emulate_device.rs  http2_fetch.rs  proxy_fetch.rs  proxy_usage.rs  rawfetch.rs  simple_get.rs  verify_dns_caching.rs  verify_tls_caching.rs  with_cookies.rs
chromenet/findings/: analysis.md  code_review.md  performance.md  redirects.md
chromenet/src/: client.rs  lib.rs
chromenet/src/base/: context.rs  loadstate.rs  mod.rs  neterror.rs  tests.rs
chromenet/src/cookies/: browser.rs  canonical_cookie.rs  canonicalcookie.rs  chromedb.rs  error.rs  mod.rs  monster.rs  oscrypt.rs  persistence.rs  psl.rs  safari.rs
chromenet/src/cookies/decrypt/: linux.rs  macos.rs  mod.rs  windows.rs
chromenet/src/dns/: gai.rs  hickory.rs  mod.rs  resolve.rs
chromenet/src/emulation/: factory.rs  mod.rs
chromenet/src/emulation/profiles/: chrome.rs  edge.rs  firefox.rs  mod.rs  okhttp.rs  opera.rs  safari.rs
chromenet/src/http/: digestauth.rs  h2fingerprint.rs  h2settings.rs  httpcache.rs  mod.rs  multipart.rs  orderedheaders.rs  requestbody.rs  response.rs  responsebody.rs  retry.rs  streamfactory.rs  transaction.rs
chromenet/src/quic/: config.rs  connection.rs  mod.rs
chromenet/src/socket/: authcache.rs  client.rs  connectjob.rs  matcher.rs  mod.rs  pool.rs  proxy.rs  stream.rs  tls.rs
chromenet/src/socket/tls/: impersonate.rs  mod.rs  options.rs
chromenet/src/tls/: ct.rs  ctverifier.rs  hsts.rs  mod.rs  pinning.rs
chromenet/src/urlrequest/: context.rs  device.rs  job.rs  mod.rs  profile.rs  request.rs
chromenet/src/ws/: connection.rs  message.rs  mod.rs
chromenet/tests/: authcache_test.rs  chromium_header_tests.rs  client_test.rs  cookies_test.rs  dns_test.rs  emulation_test.rs  header_stress_test.rs  headers_test.rs  hsts_test.rs  http_body_test.rs  integration_test.rs  pinning_test.rs  pool_test.rs  proxy_test.rs  psl_test.rs  quic_test.rs  redirect_test.rs  reliability_test.rs  socket_pool_test.rs  tls_test.rs  urlrequest_test.rs  wreq_compat_test.rs
