[package]
name = "chromenet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Crypto (Raw BoringSSL)
boring = "4.0"
tokio-boring = "4.0"
foreign-types = "0.3"

# Low-level HTTP Parsing (No Client Logic)
hyper = { version = "1.1", features = ["client", "http1", "http2"] }
http = "1.0"
bytes = "1.5"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Connection State
dashmap = "5.5"
once_cell = "1.19"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.35", features = ["full", "test-util"] }

[[bench]]
name = "headers"
harness = false

[[bench]]
name = "pool"
harness = false

[[bench]]
name = "tls_bench"
harness = false

[[bench]]
name = "device_bench"
harness = false

[[bench]]
name = "cookies_bench"
harness = false
