[package]
name = "chromenet"
version = "0.1.0"
edition = "2021"
authors = ["Deepmind Agentic Coding Team"]
description = "A production-ready Rust HTTP client library with Chromium-inspired architecture for browser fingerprinting, TLS emulation, and advanced networking features."
repository = "https://github.com/google-deepmind/chromenet"
license = "MIT"
keywords = ["http", "client", "browser", "fingerprinting", "chromium"]
categories = ["network-programming", "web-programming::http-client"]

[features]
default = ["json"]
json = []

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Crypto (Raw BoringSSL)
boring = "4.0"
tokio-boring = "4.0"
foreign-types = "0.3"

# Low-level HTTP Parsing (No Client Logic)
hyper = { version = "1.1", features = ["client", "http1", "http2"] }
http = "1.0"
bytes = "1.5"
http-body = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Connection State
dashmap = "5.5"

# Utilities
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
base64 = "0.22.1"
# HTTP/2 with fingerprint emulation (forked h2 crate)
http2 = { version = "0.5", features = ["unstable"] }
psl = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
zeroize = "1.7"

# DNS Resolution (Async with DoH/DoT support)
hickory-resolver = "0.25"

# WebSocket support
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# QUIC/HTTP3 support (optional, heavy dependency)
# quinn = { version = "0.11", optional = true }

[build-dependencies]
static_vcruntime = "2.0"


# Platform-specific dependencies for cookie decryption
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
aes-gcm = "0.10"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.35", features = ["full", "test-util"] }
tempfile = "3.10"

[[bench]]
name = "headers"
harness = false

[[bench]]
name = "pool"
harness = false

[[bench]]
name = "h1_vs_h2"
harness = false

[[bench]]
name = "tls_bench"
harness = false

[[bench]]
name = "device_bench"
harness = false

[[bench]]
name = "cookies_bench"
harness = false

[[bench]]
name = "hsts_bench"
harness = false

[[bench]]
name = "psl_bench"
harness = false

[[bench]]
name = "pinning_bench"
harness = false

[[bench]]
name = "emulation_bench"
harness = false

[[bench]]
name = "realistic_workload"
harness = false
